--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -26,7 +26,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row mt-2">
+                                <!-- <div class="row mt-2">
                                     <div class="col-md">
                                         <div class="customdropdown">
                                             <div class="select selectadjustmenttype">
@@ -38,7 +38,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="row mt-2">
                                     <div class="col-md">
                                         <div class="customdropdown">
@@ -159,7 +159,7 @@
                                 <tr>
                                     <th class="text-left h5 col-1">ID</th>
                                     <th class="text-left h5 col-2">Branch</th>
-                                    <th class="text-left h5">Type</th>
+                                    <th class="text-left h5 col-1">Branch ID</th>
                                     <th class="text-left h5">Created Date</th>
                                     <th class="text-left h5">Created By</th>
                                     <th class="text-left h5 col-1">Status</th>
