--- a/views/stockadjustment/stockadjustment.ejs
+++ b/views/stockadjustment/stockadjustment.ejs
@@ -6,7 +6,7 @@
                     <div class="card-header header-bg">
                         <div class="row">
                             <div class="col">
-                                <h6 class="m-0 font-weight-bold mt-2">Add Products Quantity</h6>
+                                <h6 class="m-0 font-weight-bold mt-2 label-title h4">Add Products Quantity</h6>
                             </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <i class="fas fa-chevron-right"></i>
                         </button>
                         <% } %>
-                        <h6 class="mt-2 ml-3 font-weight-bold table-title">Stock Adjustments</h6>
+                        <h6 class="mt-2 ml-3 font-weight-bold table-title label-title h4">Stock Adjustments</h6>
                     </div>
                 </div>
                 <div class="col-md-9">
