--- a/views/stockadjustment/stockadjustmentscripts.ejs
+++ b/views/stockadjustment/stockadjustmentscripts.ejs
@@ -14,6 +14,7 @@
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
             </tr>`;
 
         const tbody = $('#adjustment-table tbody');
@@ -33,6 +34,8 @@
             data.forEach(item => {
                 if(status === "PENDING"){
                     costDisplay = "Pending"
+                }else if(status === "CANCELLED"){
+                    costDisplay = "Cancelled"
                 }else{
                     costDisplay = item.stockafter
                 }
@@ -402,8 +405,8 @@
                 if (quantity == 0 ) {
                     message += "0 " + (index + 1) + ", ";
                 }
-                if (Math.abs(quantity) > currentStocks){
-                    message += "Deduction cannot exceed current stocks " + (index + 1) + ", "
+                if (quantity < 0 && Math.abs(quantity) > currentStocks) {
+                    message += "Deduction cannot exceed current stocks at index " + (index + 1) + ", ";
                 }
             });
 
@@ -461,6 +464,28 @@
                     adjustmentId: adjustmentId,
                     branch: branch,
                     status: status
+                },
+                success: function (result) {
+                    if (result.msg == 'success') {
+                        LoadTable()
+                        DisplayAdjustmentDetails(adjustmentId);
+                        success('Saved', 'Successfully')
+                    }
+                },
+                error: function (err) {
+                    warning(err);
+                }
+            })
+        });
+        //#endregion
+
+        //#region Cancel Adjustment
+        $(document).on('click', '#cancelButton', function () {
+            $.ajax({
+                type: 'PATCH',
+                url: '/stockadjustment/cancel',
+                data: {
+                    adjustmentId: adjustmentId
                 },
                 success: function (result) {
                     if (result.msg == 'success') {
