--- a/views/transferorder/transferorderscripts.ejs
+++ b/views/transferorder/transferorderscripts.ejs
@@ -238,6 +238,93 @@
             });
         });
 
+        //#region Email
+        $(document).on('click', '#emailBtn', function () {
+            $.ajax({
+                type: 'POST',
+                url: '/transferorder/getapprovaldetails',
+                data: {
+                    transferid: transferid,
+                    branchid: fromlocationid
+                },
+                success: function (result) {
+                    const approvaltable = $('#transferEmailDetails tbody');
+                    approvaltable.empty();
+                    // console.log(result);
+                    let data = result.data;
+                    $("#fromBranchEmail").text(data[0].fromlocation + ` (${data[0].fromid})`)
+                    $("#toBranchEmail").text(data[0].tolocation + ` (${data[0].toid})`)
+                    $.each(data, function (key, item) {
+                        const tr = $('<tr>').append(
+                            $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.productname, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.totransferquantity, 'data-label': 'Transfer Date', class: 'custom-mobile-align transferquantity' }),
+                            $('<td>', { text: item.fromcurrentstocks, 'data-label': 'Total Quantity', class: 'custom-mobile-align branchstock' }),
+                        );
+
+                        approvaltable.append(tr);
+                    })
+
+                },
+                error: function (err) {
+                    warning(err);
+                }
+            });
+        });
+
+        $(document).on('click', '#sendEmail', function () {
+            const $btnIcon = $(this).find('#emailLabel');
+            const $btnSpinner = $(this).find('#emailLoading');
+            $btnIcon.addClass('d-none');
+            $btnSpinner.removeClass('d-none');
+
+            console.log("Email Sending..")
+            const receiverName = $("#receiverName").val();
+            const receiverEmail = $("#receiverEmail").val();
+            let message = "";
+            if(!receiverName){
+                message += "Receiver Name, "
+            }
+            if(!receiverEmail){
+                message += "Receiver Email, "
+            }else if (!/@/.test(receiverEmail)) {
+                message += "Receiver Email should contain an '@' symbol. ";
+            }
+
+            if (message != ""){
+                warning("Required!", `Empty ${message}`);
+                $btnIcon.removeClass('d-none');
+                $btnSpinner.addClass('d-none');
+                return;
+            }else{
+                $.ajax({
+                    type: 'POST',
+                    url: '/transferorder/send-mail',
+                    data: {
+                        transferid: transferid,
+                        receiverName: receiverName,
+                        receiverEmail: receiverEmail
+                    },
+                    success: function (result) {
+                        console.log(result);
+                        if (result.msg =='success') {
+                            success("Success!", "Email Sent successfully");
+                            $("#receiverName").val('');
+                            $("#receiverEmail").val('');
+                            $('#transfer-email').modal('hide');
+                        }
+                        $btnIcon.removeClass('d-none');
+                        $btnSpinner.addClass('d-none');
+                    },
+                    error: function (err) {
+                        warning("Warning", err);
+                    }
+                })
+            }
+        });
+
+        //#endregion
+
         $(document).on('click', '.bmss-link', function () {
             $.ajax({
                 type: 'POST',
@@ -303,7 +390,9 @@
                     if ('<%= accesstype%>' === 'Owner'){
                         if (item.status === 'PENDING') {
                             action = `<button id="approveBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="approveBtn" data-toggle="modal" data-target="#transfer-approval">APPROVE</button>
-                                <button id="cancelBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="cancelBtn">CANCEL</button>`;
+                                <button id="cancelBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="cancelBtn">CANCEL</button>
+                                <button id="emailBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="sendBtn" data-toggle="modal" data-target="#transfer-email">EMAIL</button>
+                                `;
 
                         } else if (item.status === 'APPROVED') {
                             action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
@@ -313,7 +402,9 @@
                             action = `Waiting for Approval`;
 
                         } else if (item.status === 'APPROVED') {
-                            action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
+                            action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>
+                            <button id="emailBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="sendBtn" data-toggle="modal" data-target="#transfer-email">EMAIL</button>`;
+                            
                         }
                     }
 
