--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -354,18 +354,19 @@
                         if (result.msg == 'success') {
                             let data = result.data;
                             let graphData = data.graphData;
+                            // console.log(graphData);
                             const topSellersGraph = $("#top-sellers-graph-loader");
                             topSellersGraph.empty();
                             if (graphData && graphData.length > 0) {
                                 let labels = graphData.map(item => item.name);
-                                let totalQuantity = graphData.map(item => item.totalQuantity);
+                                let totalPrice = graphData.map(item => item.totalPrice);
                                 if (!topSellersChart) {
                                     let ctx = document.getElementById('topSellersChart').getContext('2d');
                                     let chartdata = {
                                         labels: labels,
                                         datasets: [{
                                             label: 'Total Sales',
-                                            data: totalQuantity,
+                                            data: totalPrice,
                                             backgroundColor: [
                                                 'rgb(46, 212, 126, .65)',
                                                 'rgb(255, 0, 64, .65)',
