--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -350,7 +350,7 @@
                         branch: branch,
                     },
                     success: function (result) {
-                        // console.log(result.data)
+                        console.log("Data:",result.data)
                         if (result.msg == 'success') {
                             let data = result.data;
                             let graphData = data.graphData;
